vbnc/vbnc/tests/Errors/30562.vb
Option Strict On
Module A
    Public Sub M()

    End Sub
End Module
Module B
    Public Sub M()

    End Sub
End Module

Class C
    Shared Sub Main()
        M()
    End Sub
End Class